# GAN

./: .gitignore  README.md  pyproject.toml
notebooks/: 1. Vanilla GAN PyTorch.ipynb  model.py  modern_imports.py  utils.py
src/gan_learning/: __init__.py
