[project]
name = "gan-learning"
version = "0.1.0"
description = "A progressive codebase for learning and implementing Generative Adversarial Networks (GANs)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.5.0",
    # Data handling
    "pandas>=2.0.0",
    # Visualization and monitoring
    "tensorboard>=2.13.0",
    "tensorboardX>=2.6",
    # Jupyter for experimentation
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
    # Development tools
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
